fix(todo/list): footer height - now it covers ipad and landscape orientations

--- a/src/components/todo-list/todo-list.scss
+++ b/src/components/todo-list/todo-list.scss
@@ -348,7 +348,7 @@ todo-list {
     #footer {
         color: #777;
         padding: 10px 15px;
-        height: 20px;
+        height: 54px;
         text-align: center;
         border-top: 1px solid #e6e6e6;
     }
